correction SecurityConfig